# pwclient

./: README.rst  readthedocs.yml  setup.cfg  test-requirements.txt  tox.ini
docs/: conf.py  index.rst  pwclientrc.rst  usage.rst
docs/releasenotes/: index.rst
pwclient/: checks.py  compat.py  filters.py  parser.py  patches.py  people.py  projects.py  shell.py  states.py  transport.py  utils.py
releasenotes/notes/: initial-release-eb74a7ae0ce3b1fb.yaml
