[metadata]
name = pwclient
summary = The command-line client for the patchwork patch tracking tool
description-file = README.rst
license = GPL v2
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GPL License v2 (GPLv2)
    Operating System :: OS Independent
keywords = patchwork api
author = Nate Case
author-email = ncase@xes-inc.com
maintainer = Stephen Finucane
maintainer-email = stephen@that.guru
home-page = https://pwclient.readthedocs.io/
project-url = https://github.com/patchwork/pwclient/

[files]
packages =
    pwclient

[entry_points]
console_scripts =
    pwclient = pwclient.shell:main

[build_sphinx]
warning-is-error = 1
build-dir = docs/_build
source-dir = docs

[wheel]
universal = 1
